// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IncompleteListButtons complete and edit are disabled when user is not owner 1`] = `
<div>
  <div
    class="float-end btn-group"
    role="group"
  >
    <button
      class="p-0 me-3 list-button-disabled btn btn-link"
      data-test-id="incomplete-list-complete"
      disabled=""
      type="button"
    >
      <svg
        aria-hidden="true"
        class="text-success"
        data-test-id="check-icon"
        fill="currentColor"
        focusable="false"
        height="32"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
        />
      </svg>
    </button>
    <a
      aria-disabled="false"
      class="p-0 me-3 list-button-enabled"
      data-discover="true"
      data-test-id="incomplete-list-share"
      href="/id1/users_lists"
    >
      <svg
        aria-hidden="true"
        class="text-primary"
        data-test-id="users-icon"
        fill="currentColor"
        focusable="false"
        height="32"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M96 128a128 128 0 1 0 256 0A128 128 0 1 0 96 128zm94.5 200.2l18.6 31L175.8 483.1l-36-146.9c-2-8.1-9.8-13.4-17.9-11.3C51.9 342.4 0 405.8 0 481.3c0 17 13.8 30.7 30.7 30.7H162.5c0 0 0 0 .1 0H168 280h5.5c0 0 0 0 .1 0H417.3c17 0 30.7-13.8 30.7-30.7c0-75.5-51.9-138.9-121.9-156.4c-8.1-2-15.9 3.3-17.9 11.3l-36 146.9L238.9 359.2l18.6-31c6.4-10.7-1.3-24.2-13.7-24.2H224 204.3c-12.4 0-20.1 13.6-13.7 24.2z"
        />
      </svg>
    </a>
    <a
      aria-disabled="true"
      class="p-0 me-3 list-button-disabled"
      data-discover="true"
      data-test-id="incomplete-list-edit"
      href="/lists/id1/edit"
      style="pointer-events: none;"
    >
      <svg
        aria-hidden="true"
        class="text-warning"
        data-test-id="edit-icon"
        fill="currentColor"
        focusable="false"
        height="32"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L362.3 51.7l97.9 97.9 30.1-30.1c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L437.7 172.3 339.7 74.3 172.4 241.7zM96 64C43 64 0 107 0 160V416c0 53 43 96 96 96H352c53 0 96-43 96-96V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H96z"
        />
      </svg>
    </a>
    <button
      class="p-0 btn btn-link"
      data-test-id="incomplete-list-trash"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="text-danger"
        data-test-id="trash-icon"
        fill="currentColor"
        focusable="false"
        height="32"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`IncompleteListButtons complete and edit are enabled when user is owner 1`] = `
<div>
  <div
    class="float-end btn-group"
    role="group"
  >
    <button
      class="p-0 me-3 list-button-enabled btn btn-link"
      data-test-id="incomplete-list-complete"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="text-success"
        data-test-id="check-icon"
        fill="currentColor"
        focusable="false"
        height="32"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
        />
      </svg>
    </button>
    <a
      aria-disabled="false"
      class="p-0 me-3 list-button-enabled"
      data-discover="true"
      data-test-id="incomplete-list-share"
      href="/id1/users_lists"
    >
      <svg
        aria-hidden="true"
        class="text-primary"
        data-test-id="users-icon"
        fill="currentColor"
        focusable="false"
        height="32"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M96 128a128 128 0 1 0 256 0A128 128 0 1 0 96 128zm94.5 200.2l18.6 31L175.8 483.1l-36-146.9c-2-8.1-9.8-13.4-17.9-11.3C51.9 342.4 0 405.8 0 481.3c0 17 13.8 30.7 30.7 30.7H162.5c0 0 0 0 .1 0H168 280h5.5c0 0 0 0 .1 0H417.3c17 0 30.7-13.8 30.7-30.7c0-75.5-51.9-138.9-121.9-156.4c-8.1-2-15.9 3.3-17.9 11.3l-36 146.9L238.9 359.2l18.6-31c6.4-10.7-1.3-24.2-13.7-24.2H224 204.3c-12.4 0-20.1 13.6-13.7 24.2z"
        />
      </svg>
    </a>
    <a
      aria-disabled="false"
      class="p-0 me-3 list-button-enabled"
      data-discover="true"
      data-test-id="incomplete-list-edit"
      href="/lists/id1/edit"
    >
      <svg
        aria-hidden="true"
        class="text-warning"
        data-test-id="edit-icon"
        fill="currentColor"
        focusable="false"
        height="32"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L362.3 51.7l97.9 97.9 30.1-30.1c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L437.7 172.3 339.7 74.3 172.4 241.7zM96 64C43 64 0 107 0 160V416c0 53 43 96 96 96H352c53 0 96-43 96-96V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H96z"
        />
      </svg>
    </a>
    <button
      class="p-0 btn btn-link"
      data-test-id="incomplete-list-trash"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="text-danger"
        data-test-id="trash-icon"
        fill="currentColor"
        focusable="false"
        height="32"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`IncompleteListButtons edit is hidden when multiSelect and selectedLists > 1 1`] = `
<div>
  <div
    class="float-end btn-group"
    role="group"
  >
    <button
      class="p-0 me-3 list-button-enabled btn btn-link"
      data-test-id="incomplete-list-complete"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="text-success"
        data-test-id="check-icon"
        fill="currentColor"
        focusable="false"
        height="32"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
        />
      </svg>
    </button>
    <button
      class="p-0 me-3 btn btn-link"
      data-test-id="incomplete-list-merge"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="text-warning"
        data-test-id="compress-icon"
        fill="currentColor"
        focusable="false"
        height="32"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M160 64c0-17.7-14.3-32-32-32s-32 14.3-32 32v64H32c-17.7 0-32 14.3-32 32s14.3 32 32 32h96c17.7 0 32-14.3 32-32V64zM32 320c-17.7 0-32 14.3-32 32s14.3 32 32 32H96v64c0 17.7 14.3 32 32 32s32-14.3 32-32V352c0-17.7-14.3-32-32-32H32zM352 64c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7 14.3 32 32 32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H352V64zM320 320c-17.7 0-32 14.3-32 32v96c0 17.7 14.3 32 32 32s32-14.3 32-32V384h64c17.7 0 32-14.3 32-32s-14.3-32-32-32H320z"
        />
      </svg>
    </button>
    <button
      class="p-0 btn btn-link"
      data-test-id="incomplete-list-trash"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="text-danger"
        data-test-id="trash-icon"
        fill="currentColor"
        focusable="false"
        height="32"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`IncompleteListButtons merge is displayed when multiSelect and selectedLists > 1 1`] = `
<div>
  <div
    class="float-end btn-group"
    role="group"
  >
    <button
      class="p-0 me-3 list-button-enabled btn btn-link"
      data-test-id="incomplete-list-complete"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="text-success"
        data-test-id="check-icon"
        fill="currentColor"
        focusable="false"
        height="32"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
        />
      </svg>
    </button>
    <button
      class="p-0 me-3 btn btn-link"
      data-test-id="incomplete-list-merge"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="text-warning"
        data-test-id="compress-icon"
        fill="currentColor"
        focusable="false"
        height="32"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M160 64c0-17.7-14.3-32-32-32s-32 14.3-32 32v64H32c-17.7 0-32 14.3-32 32s14.3 32 32 32h96c17.7 0 32-14.3 32-32V64zM32 320c-17.7 0-32 14.3-32 32s14.3 32 32 32H96v64c0 17.7 14.3 32 32 32s32-14.3 32-32V352c0-17.7-14.3-32-32-32H32zM352 64c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7 14.3 32 32 32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H352V64zM320 320c-17.7 0-32 14.3-32 32v96c0 17.7 14.3 32 32 32s32-14.3 32-32V384h64c17.7 0 32-14.3 32-32s-14.3-32-32-32H320z"
        />
      </svg>
    </button>
    <button
      class="p-0 btn btn-link"
      data-test-id="incomplete-list-trash"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="text-danger"
        data-test-id="trash-icon"
        fill="currentColor"
        focusable="false"
        height="32"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`IncompleteListButtons share is disabled when user does not have write permissions 1`] = `
<div>
  <div
    class="float-end btn-group"
    role="group"
  >
    <button
      class="p-0 me-3 list-button-enabled btn btn-link"
      data-test-id="incomplete-list-complete"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="text-success"
        data-test-id="check-icon"
        fill="currentColor"
        focusable="false"
        height="32"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
        />
      </svg>
    </button>
    <a
      aria-disabled="true"
      class="p-0 me-3 list-button-disabled"
      data-discover="true"
      data-test-id="incomplete-list-share"
      href="/id1/users_lists"
      style="pointer-events: none;"
    >
      <svg
        aria-hidden="true"
        class="text-primary"
        data-test-id="users-icon"
        fill="currentColor"
        focusable="false"
        height="32"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M96 128a128 128 0 1 0 256 0A128 128 0 1 0 96 128zm94.5 200.2l18.6 31L175.8 483.1l-36-146.9c-2-8.1-9.8-13.4-17.9-11.3C51.9 342.4 0 405.8 0 481.3c0 17 13.8 30.7 30.7 30.7H162.5c0 0 0 0 .1 0H168 280h5.5c0 0 0 0 .1 0H417.3c17 0 30.7-13.8 30.7-30.7c0-75.5-51.9-138.9-121.9-156.4c-8.1-2-15.9 3.3-17.9 11.3l-36 146.9L238.9 359.2l18.6-31c6.4-10.7-1.3-24.2-13.7-24.2H224 204.3c-12.4 0-20.1 13.6-13.7 24.2z"
        />
      </svg>
    </a>
    <a
      aria-disabled="false"
      class="p-0 me-3 list-button-enabled"
      data-discover="true"
      data-test-id="incomplete-list-edit"
      href="/lists/id1/edit"
    >
      <svg
        aria-hidden="true"
        class="text-warning"
        data-test-id="edit-icon"
        fill="currentColor"
        focusable="false"
        height="32"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L362.3 51.7l97.9 97.9 30.1-30.1c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L437.7 172.3 339.7 74.3 172.4 241.7zM96 64C43 64 0 107 0 160V416c0 53 43 96 96 96H352c53 0 96-43 96-96V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H96z"
        />
      </svg>
    </a>
    <button
      class="p-0 btn btn-link"
      data-test-id="incomplete-list-trash"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="text-danger"
        data-test-id="trash-icon"
        fill="currentColor"
        focusable="false"
        height="32"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`IncompleteListButtons share is enabled when user has write permissions and not multiSelect 1`] = `
<div>
  <div
    class="float-end btn-group"
    role="group"
  >
    <button
      class="p-0 me-3 list-button-enabled btn btn-link"
      data-test-id="incomplete-list-complete"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="text-success"
        data-test-id="check-icon"
        fill="currentColor"
        focusable="false"
        height="32"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
        />
      </svg>
    </button>
    <a
      aria-disabled="false"
      class="p-0 me-3 list-button-enabled"
      data-discover="true"
      data-test-id="incomplete-list-share"
      href="/id1/users_lists"
    >
      <svg
        aria-hidden="true"
        class="text-primary"
        data-test-id="users-icon"
        fill="currentColor"
        focusable="false"
        height="32"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M96 128a128 128 0 1 0 256 0A128 128 0 1 0 96 128zm94.5 200.2l18.6 31L175.8 483.1l-36-146.9c-2-8.1-9.8-13.4-17.9-11.3C51.9 342.4 0 405.8 0 481.3c0 17 13.8 30.7 30.7 30.7H162.5c0 0 0 0 .1 0H168 280h5.5c0 0 0 0 .1 0H417.3c17 0 30.7-13.8 30.7-30.7c0-75.5-51.9-138.9-121.9-156.4c-8.1-2-15.9 3.3-17.9 11.3l-36 146.9L238.9 359.2l18.6-31c6.4-10.7-1.3-24.2-13.7-24.2H224 204.3c-12.4 0-20.1 13.6-13.7 24.2z"
        />
      </svg>
    </a>
    <a
      aria-disabled="false"
      class="p-0 me-3 list-button-enabled"
      data-discover="true"
      data-test-id="incomplete-list-edit"
      href="/lists/id1/edit"
    >
      <svg
        aria-hidden="true"
        class="text-warning"
        data-test-id="edit-icon"
        fill="currentColor"
        focusable="false"
        height="32"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M471.6 21.7c-21.9-21.9-57.3-21.9-79.2 0L362.3 51.7l97.9 97.9 30.1-30.1c21.9-21.9 21.9-57.3 0-79.2L471.6 21.7zm-299.2 220c-6.1 6.1-10.8 13.6-13.5 21.9l-29.6 88.8c-2.9 8.6-.6 18.1 5.8 24.6s15.9 8.7 24.6 5.8l88.8-29.6c8.2-2.7 15.7-7.4 21.9-13.5L437.7 172.3 339.7 74.3 172.4 241.7zM96 64C43 64 0 107 0 160V416c0 53 43 96 96 96H352c53 0 96-43 96-96V320c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H96z"
        />
      </svg>
    </a>
    <button
      class="p-0 btn btn-link"
      data-test-id="incomplete-list-trash"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="text-danger"
        data-test-id="trash-icon"
        fill="currentColor"
        focusable="false"
        height="32"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`IncompleteListButtons share is hidden when multiSelect and selectedLists > 1 1`] = `
<div>
  <div
    class="float-end btn-group"
    role="group"
  >
    <button
      class="p-0 me-3 list-button-enabled btn btn-link"
      data-test-id="incomplete-list-complete"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="text-success"
        data-test-id="check-icon"
        fill="currentColor"
        focusable="false"
        height="32"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
        />
      </svg>
    </button>
    <button
      class="p-0 me-3 btn btn-link"
      data-test-id="incomplete-list-merge"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="text-warning"
        data-test-id="compress-icon"
        fill="currentColor"
        focusable="false"
        height="32"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M160 64c0-17.7-14.3-32-32-32s-32 14.3-32 32v64H32c-17.7 0-32 14.3-32 32s14.3 32 32 32h96c17.7 0 32-14.3 32-32V64zM32 320c-17.7 0-32 14.3-32 32s14.3 32 32 32H96v64c0 17.7 14.3 32 32 32s32-14.3 32-32V352c0-17.7-14.3-32-32-32H32zM352 64c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7 14.3 32 32 32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H352V64zM320 320c-17.7 0-32 14.3-32 32v96c0 17.7 14.3 32 32 32s32-14.3 32-32V384h64c17.7 0 32-14.3 32-32s-14.3-32-32-32H320z"
        />
      </svg>
    </button>
    <button
      class="p-0 btn btn-link"
      data-test-id="incomplete-list-trash"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="text-danger"
        data-test-id="trash-icon"
        fill="currentColor"
        focusable="false"
        height="32"
        role="img"
        style="display: inline-block; vertical-align: middle;"
        viewBox="0 0 512 512"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3 32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2 6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0 46.3-19.7 47.9-45L416 128z"
        />
      </svg>
    </button>
  </div>
</div>
`;
